--- a/ch03_database/src/main/resources/application.yml
+++ b/ch03_database/src/main/resources/application.yml
@@ -9,3 +9,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  sql:
+    init:
+      mode: always
+
+logging:
+  level:
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
