--- a/ch04_actuator_info_endpoint/build.gradle
+++ b/ch04_actuator_info_endpoint/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    runtimeOnly("com.h2database:h2")
 }
 
 tasks.withType(KotlinCompile) {
